--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -108,7 +108,6 @@
 .logo {
   position: relative;
 }
-/* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
@@ -230,7 +229,7 @@
 }
 
 .navbar-toggler-icon {
-  background-color: white !important; /* Force the blue background */
-  background-image: none !important; /* Remove default image */
-  border: 1px solid white; /* Add a border if you want it to be more visible */
+  background-color: white !important; 
+  background-image: none !important; 
+  border: 1px solid white; 
 }
